# cli-chamoru-dictionary

./: CHANGELOG.md  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yml
cli_chamoru_dictionary/: __init__.py  add.py  chamoru_dictionary.json  dict_helper.py  main.py  orthography_helper.py  search.py
tests/: test_dict_helper.py  test_orthography_helper.py
