[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cli_chamoru_dictionary"
authors = [{name = "David Taitingfong", email = "DJTai@pm.me"}]
readme = "README.md"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

[project.urls]
Home = "https://github.com/DJTai"
